--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/rish_image.jpg" alt="" /></a>
-					<h1><strong>Hi, I'm Rishika </strong>, a super simple<br />
+					<h1><strong>Hi, I'm Rishika </strong>, an aspiring business analyst<br />
 					responsive site template freebie<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
