--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/rish_image.jpg" alt="" /></a>
-					<h1><strong>Hi, I'm Rishika Chaudhary </strong>, an aspiring business analyst<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>Hi, I'm Rishika Chaudhary </strong><br /></h1>
 				</div>
 			</header>
 
@@ -32,7 +30,10 @@
 							<h2>Welcome to my portfolio!<br />
 							</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>An aspiring Business Analyst, currently pursuing MS. in Business Analytics at UC Davis.
+Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics. Deeply passionate about the field of Big Data, and I like to spend my time reading or contemplating the nuances of this field.
+
+Throughout my undergraduate study and internship experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and SAS. .</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/19lCCwkSt2tYipam51zYwgDcS-Fpj1-Bd/view" class="button">View Resume</a></li>
 						</ul>
