--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							</h2>
 						</header>
 						<p>An aspiring Business Analyst, currently pursuing MS. in Business Analytics at UC Davis.<br />
-Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics. Deeply passionate about the field of Big Data, and I like to spend my time reading or contemplating the nuances of this field.
+Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics. Deeply passionate about the field of Big Data, and I like to spend my time reading and contemplating the nuances of this field.
 
 Throughout my undergraduate study and internship experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and SAS. .</p>
 						<ul class="actions">
