--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/rish_image.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/rish_image.jpg"  width="100" height="100" alt="" /></a>
 					<h1><strong>Hi, I'm Rishika Chaudhary </strong><br /></h1>
 				</div>
 			</header>
