--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/rish_image.jpg"  max-width="100%" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/rish_image.jpg" alt="" /></a>
 					<h1><strong>Hi, I'm Rishika Chaudhary </strong><br /></h1>
 				</div>
 			</header>
@@ -33,7 +33,7 @@
 						<p>An aspiring Business Analyst, currently pursuing MS. in Business Analytics at UC Davis.<br />
 Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics. Deeply passionate about the field of Big Data, and I like to spend my time reading and contemplating the nuances of this field.
 
-Throughout my undergraduate study and internship experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and SAS. .</p>
+Throughout my undergraduate study and internship experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and SAS.</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/19lCCwkSt2tYipam51zYwgDcS-Fpj1-Bd/view" class="button">View Resume</a></li>
 						</ul>
