--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/rc754/Rishika--Loan_Prediction_Machine_Learning" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Loan Approval Prediction</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
