--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 								<a href="#" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Loan Approval Prediction</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/rc754/Rishika--Loan_Prediction_Machine_Learning" class="special">View Project</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
