--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="#" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Loan Approval Prediction</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan.</p>
 								<a href="https://github.com/rc754/Rishika--Loan_Prediction_Machine_Learning" class="special">View Project</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
