--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 								<a href="https://github.com/rc754/Rishika--Loan_Prediction_Machine_Learning" class="special">View Project</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/snn1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
+								<h3>Spiking Neural Network</h3>
+								<p> A Python implementation of hardware efficient SNN, in which reconstruction of input images from the MNIST dataset has been carried out by employing brain learning algorithms (STDP),.</p>
+						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Project</a>
+	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
