--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/loan_2.png" class="image fit thumb"><img src="images/loan_2.png" alt="" /></a>
 								<h3>Loan Approval Prediction</h3>
-								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan.</p>
+								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan using Data Mining and employing various ML algorithms in Python.</p>
 								<a href="https://github.com/rc754/Rishika--Loan_Prediction_Machine_Learning" class="special">View Project</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/snn1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
 								<h3>Spiking Neural Network</h3>
-								<p> A Python implementation of hardware efficient SNN, in which reconstruction of input images from the MNIST dataset has been carried out by employing brain learning algorithms (STDP),.</p>
+								<p> A Python implementation of hardware efficient SNN, in which reconstruction of input images from the MNIST dataset has been carried out by employing brain learning algorithms (STDP).</p>
 						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Project</a>
 	
 							</article>
