--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 	
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/stock1.png" class="image fit thumb"><img src="images/stock1.png" alt="" /></a>
+								<h3>Stock Price Prediction</h3>
+								<p>This time series project serves as a foundation for discovering investment opportunities. Comparison of models like ARIMA, GARCH,Prophet, have been employed in R to determine the most efficient algorithm for stock prediction.</p>
+				                                <a href="https://github.com/rc754/Stock-Price-Prediction-using-R" class="special">View Project</a>
+
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
