--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/alexa2.png" class="image fit thumb"><img src="images/alexa2.png" alt="" /></a>
+								<h3>Amazon Alexa Reviews Analysis</h3>
+								<p>This project explores the technique of sentiment analysis for online reviews using supervised algorithms to evaluate the customer reviews by categorizing them into positive and negative sentiments, in Python.</p>
+						                <a href="https://github.com/rc754/Amazon-Alexa-Reviews-Python" class="special">View Project</a>
+
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
