--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/rfm5.png" class="image fit thumb"><img src="images/rfm5.png" alt="" /></a>
+								<h3E-Commerce Data Analysis</h3>
+								<p>Analysizing a transnational data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail. In addition, performing RFM Analysis to segregate customers in order to make smarter business decisions.</p>
+								<a href="https://github.com/rc754/E-commerce-Data-Visualisation" class="special">View Project</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
