--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 								<a href="https://github.com/rc754/E-commerce-Data-Visualisation" class="special">View Project</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/pc2.png" class="image fit thumb"><img src="images/pc2.png" alt="" /></a>
+								<h3>CRC aided decoding of polar codes</h3>
+								<p>This project is a verification of the fact that CRC-aided decoding schemes improve the performance of polar codes. An improved version of the list and stack decoding coupled with CRC has been implemented in MATLAB.</p>
+							        <a href="https://github.com/rc754/CRC-aided-decoding-of-polar-codes#crc-aided-decoding-of-polar-codes" class="special">View Project</a>
+
 							</article>
 						</div>
 						<ul class="actions">
