--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/rfm5.png" class="image fit thumb"><img src="images/rfm5.png" alt="" /></a>
-								<h3E-Commerce Data Analysis</h3>
+								<h3>E-Commerce Data Analysis</h3>
 								<p>Analysizing a transnational data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail. In addition, performing RFM Analysis to segregate customers in order to make smarter business decisions.</p>
 								<a href="https://github.com/rc754/E-commerce-Data-Visualisation" class="special">View Project</a>
 							</article>
