--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/rc754" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
