--- a/index.html
+++ b/index.html
@@ -110,17 +110,16 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										San Francisco, California<br />
+										
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										415-954-2787
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">rishika.chaudhary38@gmail.com</a>
 									</li>
 								</ul>
 							</div>
