--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							</h2>
 						</header>
 						<p>An aspiring Business Analyst, currently pursuing MS. in Business Analytics at UC Davis.<br />
-Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics. Deeply passionate about the field of Big Data, and I like to spend my time reading and contemplating the nuances of this field.
+Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics.My passion for Big Data leads me to spend a considerable amount of time reading and contemplating its nuances.
 
 Throughout my undergraduate study and internship experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and SAS.</p>
 						<ul class="actions">
@@ -446,8 +446,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 			</div>
 
-		<!-- Footer -->
-			<footer id="footer">
+<!-- 		<!-- Footer -->
+<!--			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -459,8 +459,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
-			</footer>
-
+			</footer> -->
+-->
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
