--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/loan_2.png" class="image fit thumb"><img src="images/loan_2.png" alt="" /></a>
