--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/rish_image.jpg" alt="" /></a>
 					<h1><strong>Hi, I'm Rishika Chaudhary </strong><br /></h1>
+					<ul>
+								<li><a href="#two" id="top-link"><span class="icon solid fa-home">Recent Projects</span></a></li>
+								<li><a href="#four" id="portfolio-link"><span class="icon solid fa-th">Blogs</span></a></li>
+								<li><a href="#three" id="about-link"><span class="icon solid fa-user">Contact</span></a></li>
+		
+							</ul>
 				</div>
 			</header>
 
@@ -88,6 +94,25 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 							<li><a href="https://github.com/rc754" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
+				<!-- Two -->
+					<section id="four">
+						<h2>Blogs</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/loan_2.png" class="image fit thumb"><img src="images/loan_2.png" alt="" /></a>
+								<h3>Following my California Dream </h3>
+								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan using Data Mining and employing various ML algorithms in Python.</p>
+								<a href="https://gsm.ucdavis.edu/blog/following-my-california-dream-msba-san-francisco="special">View Blog</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/snn1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
+								<h3>Spiking Neural Network</h3>
+								<p> A Python implementation of hardware efficient SNN, in which reconstruction of input images from the MNIST dataset has been carried out by employing brain learning algorithms (STDP).</p>
+						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Project</a>
+	
+							</article>
+						</section>
+							
 
 				<!-- Three -->
 					<section id="three">
