--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 						<h2>Blogs</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/loan_2.png" class="image fit thumb"><img src="images/loan_2.png" alt="" /></a>
+								<a href="images/gg.png" class="image fit thumb"><img src="images/gg.png" alt="" /></a>
 								<h3>Following my California Dream </h3>
 								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan using Data Mining and employing various ML algorithms in Python.</p>
 								<a href="https://gsm.ucdavis.edu/blog/following-my-california-dream-msba-san-francisco="special">View Blog</a>
