--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/rish_image.jpg" alt="" /></a>
 					<h1><strong>Hi, I'm Rishika Chaudhary </strong><br /></h1>
-					<ul>
-								<li><a href="#two" id="top-link"><span class="icon solid fa-home">Recent Projects</span></a></li>
-								<li><a href="#four" id="portfolio-link"><span class="icon solid fa-th">Blogs</span></a></li>
-								<li><a href="#three" id="about-link"><span class="icon solid fa-user">Contact</span></a></li>
-		
-							</ul>
+					<h1>__________________________________________________________</h1>
+				</br>
+								<a href="#two" class="hrefelemnts" id="top-link">Recent Projects</a>
+				</br>
+								<a href="#four" class="hrefelemnts" id="portfolio-link">Recent Blogs</a>
+			</br>
+								<a href="#three" class="hrefelemnts" id="about-link">Contact Me</a>
+		</br>
 				</div>
 			</header>
 
@@ -102,7 +104,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 								<a href="images/gg.png" class="image fit thumb"><img src="images/gg.png" alt="" /></a>
 								<h3>Following my California Dream </h3>
 								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan using Data Mining and employing various ML algorithms in Python.</p>
-								<a href="https://gsm.ucdavis.edu/blog/following-my-california-dream-msba-san-francisco="special">View Blog</a>
+								<a href="https://gsm.ucdavis.edu/blog/following-my-california-dream-msba-san-francisco"special">View Blog</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/snn1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
