--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 						<h2>Blogs</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/gg.png" class="image fit thumb"><img src="images/gg.png" alt="" /></a>
+								<a href="images/gg2.png" class="image fit thumb"><img src="images/gg2.png" alt="" /></a>
 								<h3>Following my California Dream </h3>
-								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan using Data Mining and employing various ML algorithms in Python.</p>
+								<p>Thriving in a rigorous graduate business program.</p>
 								<a href="https://gsm.ucdavis.edu/blog/following-my-california-dream-msba-san-francisco"special">View Blog</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/snn1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
-								<h3>Spiking Neural Network</h3>
-								<p> A Python implementation of hardware efficient SNN, in which reconstruction of input images from the MNIST dataset has been carried out by employing brain learning algorithms (STDP).</p>
+								<h3>Tap that Shoulder!</h3>
+								<p>Speed Networking with MSBA Alumni.</p>
 						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Project</a>
 	
 							</article>
