--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Throughout my undergraduate study and internship experiences, I have accumulated
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/loan_2.png" class="image fit thumb"><img src="images/loan_2.png" alt="" /></a>
+								<a href="https://github.com/rc754/Rishika--Loan_Prediction_Machine_Learning" class="image fit thumb"><img src="images/loan_2.png" alt="" /></a>
 								<h3>Loan Approval Prediction</h3>
 								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan using Data Mining and employing various ML algorithms in Python.</p>
 								<a href="https://github.com/rc754/Rishika--Loan_Prediction_Machine_Learning" class="special">View Project</a>
