--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 							<h2>Welcome to my portfolio!<br />
 							</h2>
 						</header>
-						<p>An aspiring Business Analyst, currently pursuing MS. in Business Analytics at UC Davis.<br />
+						<p>A motivated and detail oriented MSBA candidate at UC Davis leveraging a year of experience in IT Engineering.<br />
 Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics.My passion for Big Data leads me to spend a considerable amount of time reading and contemplating its nuances.
 
-Throughout my undergraduate study and internship experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and SAS.</p>
+Throughout my undergraduate study and professional experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and SAS.</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/19lCCwkSt2tYipam51zYwgDcS-Fpj1-Bd/view" class="button">View Resume</a></li>
 						</ul>
