--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Graduated in 2021, with a major in Electronics and Communication Engineering, an
 
 Throughout my undergraduate study and professional experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and SAS.</p>
 						<ul class="actions">
-							<li><a href="https://drive.google.com/file/d/19lCCwkSt2tYipam51zYwgDcS-Fpj1-Bd/view" class="button">View Resume</a></li>
+							<li><a href="https://drive.google.com/file/d/1zFkmUsKUzfo9MfWkD1UNINvkcKxb98k1/view?usp=sharing" class="button">View Resume</a></li>
 						</ul>
 					</section>
 
