--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 						<h2>Blogs</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/gg2.png" class="image fit thumb"><img src="images/gg2.png" alt="" /></a>
+								<a href="images/gg_2.png" class="image fit thumb"><img src="images/gg2.png" alt="" /></a>
 								<h3>Following my California Dream </h3>
 								<p>Thriving in a rigorous graduate business program.</p>
 								<a href="https://gsm.ucdavis.edu/blog/following-my-california-dream-msba-san-francisco"special">View Blog</a>
