--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 								<a href="https://gsm.ucdavis.edu/blog/following-my-california-dream-msba-san-francisco"special">View Blog</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/snn1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
+								<a href="images/n1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
 								<h3>Tap that Shoulder!</h3>
 								<p>Speed Networking with MSBA Alumni.</p>
 						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Project</a>
