--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 								<a href="images/n1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
 								<h3>Tap that Shoulder!</h3>
 								<p>Speed Networking with MSBA Alumni.</p>
-						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Project</a>
+						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Blog</a>
 	
 							</article>
 						</section>
