--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 						<h2>Blogs</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/gg_2.png" class="image fit thumb"><img src="images/gg2.png" alt="" /></a>
+								<a href="images/gg_2.png" class="image fit thumb"><img src="images/gg_2.png" alt="" /></a>
 								<h3>Following my California Dream </h3>
 								<p>Thriving in a rigorous graduate business program.</p>
 								<a href="https://gsm.ucdavis.edu/blog/following-my-california-dream-msba-san-francisco"special">View Blog</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/n1.png" class="image fit thumb"><img src="images/snn1.png" alt="" /></a>
+								<a href="images/n1.png" class="image fit thumb"><img src="images/n1.png" alt="" /></a>
 								<h3>Tap that Shoulder!</h3>
 								<p>Speed Networking with MSBA Alumni.</p>
 						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Blog</a>
