--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/loan_2.png" class="image fit thumb"><img src="images/loan_2.png" alt="" /></a>
-								<h3>Loan Approval Prediction</h3>
+								<h3>Loan Default Classification</h3>
 								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan using Data Mining and employing various ML algorithms in Python.</p>
 								<a href="https://github.com/rc754/Rishika--Loan_Prediction_Machine_Learning" class="special">View Project</a>
 							</article>
