--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/med2c.jpg" class="image fit thumb"><img src="images/med2c.jpg" alt="" /></a>
+								<h3>Pharma Fetch and Analysis</h3>
+								<p>An end to end project where we fetch data from 1 mg website.</p>
+								<a href="https://github.com/rc754/Pharma-Fetch-and-Analysis" class="special">View Project</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/loan_2.png" class="image fit thumb"><img src="images/loan_2.png" alt="" /></a>
 								<h3>Loan Default Classification</h3>
 								<p>An effective prediction technique that helps the banker to predict the credit risk for customers who have applied for loan using Data Mining and employing various ML algorithms in Python.</p>
