--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 								<p>Analysizing a transnational data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail. In addition, performing RFM Analysis to segregate customers in order to make smarter business decisions.</p>
 								<a href="https://github.com/rc754/E-commerce-Data-Visualisation" class="special">View Project</a>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+<!-- 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/pc2.png" class="image fit thumb"><img src="images/pc2.png" alt="" /></a>
 								<h3>CRC aided decoding of polar codes</h3>
 								<p>This project is a verification of the fact that CRC-aided decoding schemes improve the performance of polar codes. An improved version of the list and stack decoding coupled with CRC has been implemented in MATLAB.</p>
 							        <a href="https://github.com/rc754/CRC-aided-decoding-of-polar-codes#crc-aided-decoding-of-polar-codes" class="special">View Project</a>
 
-							</article>
+							</article> -->
 						</div>
 						<ul class="actions">
 							<li><a href="https://github.com/rc754" class="button">Full Portfolio</a></li>
