--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/med2c.jpg" class="image fit thumb"><img src="images/med2c.jpg" alt="" /></a>
 								<h3>Pharma Fetch and Analysis</h3>
-								<p>An end to end project where we fetch data from 1 mg website.</p>
+								<p>End-to-end project on healthcare data analysis, consisting of PharmaFetch where data was scraped from 1mg and stored in MongoDB, and PharmAnalysis where Proof-of-Concept algorithms were implemented for inventory management, pricing strategies, and substitute recommendations for medicines.</p>
 								<a href="https://github.com/rc754/Pharma-Fetch-and-Analysis" class="special">View Project</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
