--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<p>A motivated and detail oriented MSBA candidate at UC Davis leveraging a year of experience in IT Engineering.<br />
 Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics.My passion for Big Data leads me to spend a considerable amount of time reading and contemplating its nuances.
 
-Throughout my undergraduate study and professional experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies, etc. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and Tableau.</p>
+Throughout my undergraduate study and professional experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and Tableau.</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/1QDg-Mbd7XBiM3y4rhS8WdIljHaxb4unX/view?usp=sharing" class="button">View Resume</a></li>
 						</ul>
