--- a/index.html
+++ b/index.html
@@ -116,9 +116,17 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 								<a href="images/n1.png" class="image fit thumb"><img src="images/n1.png" alt="" /></a>
 								<h3>Tap that Shoulder!</h3>
 								<p>Speed Networking with MSBA Alumni.</p>
-						                <a href="https://github.com/rc754/Spiking-Neural-Network" class="special">View Blog</a>
+						                <a href="https://gsm.ucdavis.edu/blog/tap-shoulder-speed-networking-msba-alumni" class="special">View Blog</a>
 	
 							</article>
+					                <article class="col-6 col-12-xsmall work-item">
+								<a href="images/n1.png" class="image fit thumb"><img src="images/n1.png" alt="" /></a>
+								<h3>How Walmart puts AI into play </h3>
+								<p>Our cohorts’ takeaways from top retail/tech AI expert.</p>
+						                <a href="https://gsm.ucdavis.edu/blog/how-walmart-puts-ai-and-machine-learning-play" class="special">View Blog</a>
+	
+							</article>
+																	 
 						</section>
 							
 
