--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 	
 							</article>
 					                <article class="col-6 col-12-xsmall work-item">
-								<a href="images/n1.png" class="image fit thumb"><img src="images/n1.png" alt="" /></a>
+								<a href="images/IMG_0308 (1).jpg" class="image fit thumb"><img src="images/IMG_0308 (1).jpg" alt="" /></a>
 								<h3>How Walmart puts AI into play </h3>
 								<p>Our cohorts’ takeaways from top retail/tech AI expert.</p>
 						                <a href="https://gsm.ucdavis.edu/blog/how-walmart-puts-ai-and-machine-learning-play" class="special">View Blog</a>
