--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Throughout my undergraduate study and professional experiences, I have accumulat
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">rch@ucdavis.edu</a>
+										<a href="#">rishika.chaudhary38@gmail.com</a>
 									</li>
 								</ul>
 							</div>
