--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>Welcome to my portfolio!<br />
 							</h2>
 						</header>
-						<p>A motivated and detail oriented MSBA candidate at UC Davis leveraging a year of experience in IT Engineering.<br />
+						<p>A motivated and detail oriented MSBA graduate from UC Davis leveraging a year of experience in IT Engineering.<br />
 Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics.My passion for Big Data leads me to spend a considerable amount of time reading and contemplating its nuances.
 
 Throughout my undergraduate study and professional experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and Tableau.</p>
