--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>Welcome to my portfolio!<br />
 							</h2>
 						</header>
-						<p>Analytics professional with 1.5+ years of industry experience working with data. Master’s in Analytics graduate from
+						<p>Analytics professional with 1.5+ years of industry experience working with data. Master’s in Business Analytics graduate from
 UC Davis with strong statistical and computing background. Currently looking for roles in analytics to apply skills
 and provide value for firms.<br />
 Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics.My passion for Big Data leads me to spend a considerable amount of time reading and contemplating its nuances.
