--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 							<h2>Welcome to my portfolio!<br />
 							</h2>
 						</header>
-						<p>Analytics professional with 1.5+ years of industry experience working with data. Master’s in Business Analytics graduate from
+						<p>With over 2.5 years of industry experience in data analytics, I specialize in using data to drive strategy and growth. Currently, I work at an e-commerce company, where I support the growth vertical by providing actionable insights through data analysis. Master’s in Business Analytics graduate from
 UC Davis with strong statistical and computing background. Currently looking for roles in analytics to apply skills
 and provide value for firms.<br />
 Graduated in 2021, with a major in Electronics and Communication Engineering, and a minor in Big Data Analytics.My passion for Big Data leads me to spend a considerable amount of time reading and contemplating its nuances.
 
 Throughout my undergraduate study and professional experiences, I have accumulated significant exposure to cutting-edge domains like Machine Learning, Artificial Intelligence, Big Data Technologies. Additionally, I have a good command of Data Analysis tools which include, Python, R, SQL, Power BI, and Tableau.</p>
 						<ul class="actions">
-							<li><a href="https://drive.google.com/file/d/1Ll6toHFZjjAwMFn2-PO39Cnjt5GQrF-p/view?usp=sharing" class="button">View Resume</a></li>
+							<li><a href="https://drive.google.com/file/d/1dfxPpwcBSBpOOTQKThTblyHhqfoFzpAa/view?usp=sharing" class="button">View Resume</a></li>
 						</ul>
 					</section>
 
